--- a/src/back-end/TrafficLayer/Services/IntersectionControllerService/Docker/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/Services/IntersectionControllerService/Docker/docker-compose.override.yaml
@@ -17,23 +17,23 @@ services:
       Redis__TrafficLight__Port: 6379
       Redis__TrafficLight__Password: ""
       Redis__TrafficLight__Database: 0
-      Redis__TrafficLight__KeyPrefix__State: traffic_light:{intersection_id}:state
-      Redis__TrafficLight__KeyPrefix__Duration: traffic_light:{intersection_id}:duration
-      Redis__TrafficLight__KeyPrefix__LastUpdate: traffic_light:{intersection_id}:last_update
-      Redis__TrafficLight__KeyPrefix__Priority: traffic_light:{intersection_id}:priority
-      Redis__TrafficLight__KeyPrefix__QueueLength: traffic_light:{intersection_id}:queue_length
+      Redis__TrafficLight__KeyPrefix__State: traffic_light:{intersection}.{light}:state
+      Redis__TrafficLight__KeyPrefix__Duration: traffic_light:{intersection}.{light}:duration
+      Redis__TrafficLight__KeyPrefix__LastUpdate: traffic_light:{intersection}.{light}:last_update
+      Redis__TrafficLight__KeyPrefix__Priority: traffic_light:{intersection}.{light}:priority
+      Redis__TrafficLight__KeyPrefix__QueueLength: traffic_light:{intersection}.{light}:queue_length
 
       ## DetectionCacheDB (Redis)
       Redis__Detection__Host: detection_cache_db
       Redis__Detection__Port: 6379
       Redis__Detection__Password: ""
       Redis__Detection__Database: 0
-      Redis__Detection__KeyPrefix__VehicleCount: sensor:{intersection_id}:vehicle_count
-      Redis__Detection__KeyPrefix__PedestrianCount: sensor:{intersection_id}:pedestrian_count
-      Redis__Detection__KeyPrefix__CyclistCount: sensor:{intersection_id}:cyclist_count
-      Redis__Detection__KeyPrefix__EmergencyDetected: sensor:{intersection_id}:emergency_detected
-      Redis__Detection__KeyPrefix__PublicTransportDetected: sensor:{intersection_id}:public_transport_detected
-      Redis__Detection__KeyPrefix__IncidentDetected: sensor:{intersection_id}:incident_detected
+      Redis__Detection__KeyPrefix__VehicleCount: sensor:{intersection}.vehicle_count
+      Redis__Detection__KeyPrefix__PedestrianCount: sensor:{intersection}.pedestrian_count
+      Redis__Detection__KeyPrefix__CyclistCount: sensor:{intersection}.cyclist_count
+      Redis__Detection__KeyPrefix__EmergencyDetected: sensor:{intersection}.emergency_detected
+      Redis__Detection__KeyPrefix__PublicTransportDetected: sensor:{intersection}.public_transport_detected
+      Redis__Detection__KeyPrefix__IncidentDetected: sensor:{intersection}.incident_detected
 
       # ===============================
       # CORS Policy
@@ -64,31 +64,31 @@ services:
       ## TRAFFIC.EXCHANGE
       RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
       # --- Publish
-      RabbitMQ__RoutingKeys__Traffic__LightControl: traffic.light.control.{intersection_id}.{light_id}
-      RabbitMQ__RoutingKeys__Priority__EmergencyVehicle: priority.emergency_vehicle.{intersection_id}
-      RabbitMQ__RoutingKeys__Priority__PublicTransport: priority.public_transport.{intersection_id}
-      RabbitMQ__RoutingKeys__Priority__Cyclist: priority.cyclist.{intersection_id}
-      RabbitMQ__RoutingKeys__Priority__Pedestrian: priority.pedestrian.{intersection_id}
-      RabbitMQ__RoutingKeys__Priority__Incident: priority.incident.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__LightControl: traffic.light.control.{intersection}.{light}
+      RabbitMQ__RoutingKeys__Priority__EmergencyVehicle: priority.emergency_vehicle.{intersection}
+      RabbitMQ__RoutingKeys__Priority__PublicTransport: priority.public_transport.{intersection}
+      RabbitMQ__RoutingKeys__Priority__Cyclist: priority.cyclist.{intersection}
+      RabbitMQ__RoutingKeys__Priority__Pedestrian: priority.pedestrian.{intersection}
+      RabbitMQ__RoutingKeys__Priority__Incident: priority.incident.{intersection}
       # --- Consume
       RabbitMQ__Queues__Traffic__LightUpdate: traffic.light.update.intersection_controller.queue
-      RabbitMQ__RoutingKeys__Traffic__LightUpdate: traffic.light.update.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__LightUpdate: traffic.light.update.{intersection}.{light}
 
       ## SENSOR.EXCHANGE
       RabbitMQ__Exchanges__Sensor: SENSOR.EXCHANGE
       # --- Consume
       RabbitMQ__Queues__Sensor__Intersection: sensor.data.intersection_controller.queue
-      RabbitMQ__RoutingKeys__Sensor__VehicleCount: sensor.vehicle.count.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__EmergencyVehicle: sensor.emergency_vehicle.detected.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__PublicTransport: sensor.public_transport.detected.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__PedestrianCount: sensor.pedestrian.count.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__CyclistCount: sensor.cyclist.count.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__IncidentDetected: sensor.incident.detected.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__VehicleCount: sensor.vehicle.count.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__EmergencyVehicle: sensor.emergency_vehicle.detected.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__PublicTransport: sensor.public_transport.detected.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__PedestrianCount: sensor.pedestrian.count.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__CyclistCount: sensor.cyclist.count.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__IncidentDetected: sensor.incident.detected.{intersection}
 
       ## LOG.EXCHANGE
       RabbitMQ__Exchanges__Log: LOG.EXCHANGE
       # --- Publish
-      RabbitMQ__RoutingKeys__Log__Audit: log.traffic.intersection_controller_service.audit
-      RabbitMQ__RoutingKeys__Log__Error: log.traffic.intersection_controller_service.error
+      RabbitMQ__RoutingKeys__Log__Audit: log.traffic.intersection_controller.{intersection}.audit
+      RabbitMQ__RoutingKeys__Log__Error: log.traffic.intersection_controller.{intersection}.error
 
     restart: always
