--- a/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/Docker/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/Docker/docker-compose.override.yaml
@@ -20,12 +20,12 @@ services:
       Redis__Port: 6379
       Redis__Password: ""
       Redis__Database: 0
-      Redis__KeyPrefix__VehicleCount: sensor:{intersection_id}:vehicle_count
-      Redis__KeyPrefix__PedestrianCount: sensor:{intersection_id}:pedestrian_count
-      Redis__KeyPrefix__CyclistCount: sensor:{intersection_id}:cyclist_count
-      Redis__KeyPrefix__EmergencyDetected: sensor:{intersection_id}:emergency_detected
-      Redis__KeyPrefix__PublicTransportDetected: sensor:{intersection_id}:public_transport_detected
-      Redis__KeyPrefix__IncidentDetected: sensor:{intersection_id}:incident_detected
+      Redis__KeyPrefix__VehicleCount: sensor:{intersection}.vehicle_count
+      Redis__KeyPrefix__PedestrianCount: sensor:{intersection}.pedestrian_count
+      Redis__KeyPrefix__CyclistCount: sensor:{intersection}.cyclist_count
+      Redis__KeyPrefix__EmergencyDetected: sensor:{intersection}.emergency_detected
+      Redis__KeyPrefix__PublicTransportDetected: sensor:{intersection}.public_transport_detected
+      Redis__KeyPrefix__IncidentDetected: sensor:{intersection}.incident_detected
 
       # ===============================
       # CORS Policy
@@ -56,26 +56,26 @@ services:
       ## TRAFFIC.EXCHANGE
       RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
       # --- Publish
-      RabbitMQ__RoutingKeys__Traffic__Congestion: traffic.analytics.congestion.{intersection_id}
-      RabbitMQ__RoutingKeys__Traffic__Summary: traffic.analytics.summary.{intersection_id}
-      RabbitMQ__RoutingKeys__Traffic__Incident: traffic.analytics.incident.{intersection_id}
+      RabbitMQ__RoutingKeys__Traffic__Congestion: traffic.analytics.congestion.{intersection}
+      RabbitMQ__RoutingKeys__Traffic__Summary: traffic.analytics.summary.{intersection}
+      RabbitMQ__RoutingKeys__Traffic__Incident: traffic.analytics.incident.{intersection}
 
       ## SENSOR.EXCHANGE
       RabbitMQ__Exchanges__Sensor: SENSOR.EXCHANGE
       # --- Consume
       RabbitMQ__Queues__Sensor__Analytics: sensor.data.analytics.queue
-      RabbitMQ__RoutingKeys__Sensor__VehicleCount: sensor.vehicle.count.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__EmergencyVehicle: sensor.emergency_vehicle.detected.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__PublicTransport: sensor.public_transport.detected.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__PedestrianCount: sensor.pedestrian.count.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__CyclistCount: sensor.cyclist.count.{intersection_id}
-      RabbitMQ__RoutingKeys__Sensor__IncidentDetected: sensor.incident.detected.{intersection_id}
+      RabbitMQ__RoutingKeys__Sensor__VehicleCount: sensor.vehicle.count.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__EmergencyVehicle: sensor.emergency_vehicle.detected.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__PublicTransport: sensor.public_transport.detected.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__PedestrianCount: sensor.pedestrian.count.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__CyclistCount: sensor.cyclist.count.{intersection}
+      RabbitMQ__RoutingKeys__Sensor__IncidentDetected: sensor.incident.detected.{intersection}
 
       ## LOG.EXCHANGE
       RabbitMQ__Exchanges__Log: LOG.EXCHANGE
       # --- Publish
-      RabbitMQ__RoutingKeys__Log__Audit: log.traffic.analytics_service.audit
-      RabbitMQ__RoutingKeys__Log__Error: log.traffic.analytics_service.error
+      RabbitMQ__RoutingKeys__Log__Audit: log.traffic.analytics.{intersection}.audit
+      RabbitMQ__RoutingKeys__Log__Error: log.traffic.analytics.{intersection}.error
     
     depends_on:
       traffic_analytics_db:
