--- a/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detectioncachedb.pvc.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detectioncachedb.pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: detectiondb-pvc
+  name: detectioncachedb-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 2Gi
+      storage: 1Gi
