--- a/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.pvc.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detectiondb.pvc.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: detectioncachedb-pvc
+  name: detectiondb-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 2Gi
+  storageClassName: standard   
