--- a/src/back-end/SensorLayer/Services/SensorService/K8s/k8s.sensorapi.anatoliki_pyli.yaml
+++ b/src/back-end/SensorLayer/Services/SensorService/K8s/k8s.sensorapi.anatoliki_pyli.yaml
@@ -168,10 +168,9 @@ kind: Service
 metadata:
   name: sensorapi-anatoliki-pyli
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
   - port: 8080
     targetPort: 8080
-    nodePort: 30124
   selector:
     app: sensorapi-anatoliki-pyli
