--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.kentriki_pyli.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detectionapi.kentriki_pyli.yaml
@@ -182,10 +182,9 @@ kind: Service
 metadata:
   name: detectionapi-kentriki-pyli
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
   - port: 8080
     targetPort: 8080
-    nodePort: 30123
   selector:
     app: detectionapi-kentriki-pyli
